2000-04-27  Adam Spiers <adam@spiers.net>

	* 10949: Completion/User/_perl_modules: print warning when
	perl not found on PATH forces guessing of @INC

2000-04-26  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10933: Completion/Commands/_bash_completions,
 	Completion/Commands/_history_complete_word: ensure options are set
 	as expected in _history_complete_word and _bash_completions
	
	* Adam Spiers: 10892: Completion/User/_perl_modules: ensure perl
	is there and better pattern for searching modules

	* Tanaka Akira: 10890: Completion/User/_gunzip,
	Completion/User/_gzip, Completion/User/_zcat: new completion for
	GNU zip commands

	* Tanaka Akira: 10885: Completion/X/_xset: new completion function
	for xset

	* 10926: Completion/X/_x_color, Doc/Zsh/compwid.yo, Src/Zle/complete.c,
 	Src/Zle/compmatch.c: allow to anchor on gaps between strings in
 	matching control specs
	
	* 10925: Src/Zle/compmatch.c: faster test for `*'-patterns in
 	matching control; prefer direct character matches over match specs
 	in recursive invocations of match_str()
	
	* 10924: Src/Zle/compmatch.c: fix for matching control; improve
 	merging cline lists
	
	* 10923: Completion/Core/_main_complete: better default value for
 	list-prompt style
	
	* 10922: Completion/Core/_path_files: file-sort made $fignore fail
	
2000-04-25  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10917: Src/Zle/complist.c, Src/Zle/compresult.c: don't show
 	empty hidden matches even in menu-selection
	
	* 10916: Completion/Core/_main_complete, Src/Zle/complist.c:
 	re-calculate number of line with mark when needed; make default
 	prompts more consistent
	
	* 10915: Src/Zle/computil.c: forgotten fix for _arguments using
 	multiple actions
	
	* 10912: Src/Zle/compresult.c: don't always ignore backslashes in
 	paths when testing file type
	
	* 10910: Completion/Base/_tilde, Completion/Core/_all_labels,
 	Completion/Core/_requested: small fix for _requested to be able to